Prevent seat name from overlapping winner bar.
Also rename component to "AboutContent"

--- a/frontend/src/components/Forecasts/Seats/Seats.module.css
+++ b/frontend/src/components/Forecasts/Seats/Seats.module.css
@@ -75,8 +75,8 @@
     background-color: #EEEEEE !important;
 }
 
-.seatsTopLeft {
-    width: 200px;
+.seatsLeft {
+    width: 220px;
     margin: 0px auto;
 }
 
